# Book-Rec-System

./: .gitignore  README.md  brs_data_preprocessing.py  cosineSim.ipynb  knn.py  pyproject.toml  readme.md  xgboost.ipynb  xgboostRank.ipynb
 misc/: xgboostRank.ipynb
implementation/: cosineSim.ipynb  xgboost.ipynb
ncf/: inference.py  model.py  ncf_main.py  ncf_train_test.py
