[tool.poetry]
name = "book-rec-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
nltk = "^3.8.1"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
tabulate = "^0.9.0"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
