[tool.poetry]
name = "book-rec-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
torch = "1.12.1+cu113"
torchvision = "0.13.1+cu113"
torchaudio = "0.12.1"
tqdm = "^4.66.2"
ipykernel = "^6.29.4"
nltk = "^3.8.1"
scipy = "^1.13.0"
tabulate = "^0.9.0"
xgboost = "^2.0.3"
category-encoders = "^2.6.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
secondary = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
